crates/rs_html_parser_tokenizer/tests/snapshots/textarea_test__tests__ensure_textarea_does_not_invalidate_template.snap
---
source: crates/rs_html_parser_tokenizer/tests/textarea_test.rs
expression: "tokenize(r#\"<template><h2>Flower</h2><img src=\"img_white_flower.jpg\" width=\"214\" height=\"204\"></template>\"#)"
---
[
    TokenizerToken {
        start: 1,
        end: 9,
        location: OpenTagName,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 9,
        end: 9,
        location: OpenTagEnd,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 11,
        end: 13,
        location: OpenTagName,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 13,
        end: 13,
        location: OpenTagEnd,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 14,
        end: 20,
        location: Text,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 22,
        end: 24,
        location: CloseTag,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 26,
        end: 29,
        location: OpenTagName,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 30,
        end: 33,
        location: AttrName,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 35,
        end: 55,
        location: AttrData,
        code: 0,
        quote: Double,
    },
    TokenizerToken {
        start: 56,
        end: 56,
        location: AttrEnd,
        code: 0,
        quote: Double,
    },
    TokenizerToken {
        start: 57,
        end: 62,
        location: AttrName,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 64,
        end: 67,
        location: AttrData,
        code: 0,
        quote: Double,
    },
    TokenizerToken {
        start: 68,
        end: 68,
        location: AttrEnd,
        code: 0,
        quote: Double,
    },
    TokenizerToken {
        start: 69,
        end: 75,
        location: AttrName,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 77,
        end: 80,
        location: AttrData,
        code: 0,
        quote: Double,
    },
    TokenizerToken {
        start: 81,
        end: 81,
        location: AttrEnd,
        code: 0,
        quote: Double,
    },
    TokenizerToken {
        start: 81,
        end: 81,
        location: OpenTagEnd,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 84,
        end: 92,
        location: CloseTag,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 93,
        end: 93,
        location: End,
        code: 0,
        quote: NoValue,
    },
]
